@@ -31,12 +31,9 @@ import net.minecraftforge.fml.common.ObfuscationReflectionHelper;
 import net.minecraftforge.fml.common.eventhandler.SubscribeEvent;
 import net.minecraftforge.fml.relauncher.Side;
 import net.minecraftforge.fml.relauncher.SideOnly;
-import org.apache.commons.io.FileUtils;
 import org.apache.commons.io.IOUtils;
-import org.apache.commons.io.filefilter.TrueFileFilter;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
-import sun.misc.BASE64Decoder;
 
 import javax.imageio.ImageIO;
 import java.awt.image.BufferedImage;
@@ -78,8 +75,8 @@ public class SkinChangingHandler {
     public static BufferedImage toImage(String imageString) throws IOException {
         BufferedImage image = null;
         byte[] imageByte;
-        BASE64Decoder decoder = new BASE64Decoder();
-        imageByte = decoder.decodeBuffer(imageString);
+        Base64.Decoder decoder = Base64.getDecoder();
+        imageByte = decoder.decode(imageString);
         ByteArrayInputStream bis = new ByteArrayInputStream(imageByte);
         image = ImageIO.read(bis);
         bis.close();
@@ -135,15 +132,20 @@ public class SkinChangingHandler {
     }
 
     private static File getRandomSkin(Random rand, boolean isAlex) {
-        File skins = isAlex ? SKIN_DIRECTORY_ALEX : SKIN_DIRECTORY_STEVE;
-        Collection<File> folderFiles = FileUtils.listFiles(skins, TrueFileFilter.INSTANCE, TrueFileFilter.INSTANCE);
-        if (folderFiles.isEmpty()) {
-            SKIN_LOG.info("The Skin folder was empty....Downloading some skins...");
+        List<File> skins = FileUtil.listAllSkins(isAlex ? EnumChoices.ALEX : EnumChoices.STEVE);
+        if (skins.isEmpty()) {
             FileUtil.doSetupOnThread();
-            folderFiles = FileUtils.listFiles(skins, TrueFileFilter.INSTANCE, TrueFileFilter.INSTANCE);
+            skins = FileUtil.listAllSkins(isAlex ? EnumChoices.ALEX : EnumChoices.STEVE);
         }
-        SKIN_LOG.info("There were " + folderFiles.size() + " to chose from");
-        return (File) folderFiles.toArray()[rand.nextInt(folderFiles.size())];
+
+        for (File skin : skins) {
+            if (!skin.getName().contains(".png")) {
+                skins.remove(skin);
+            }
+        }
+
+        SKIN_LOG.info("There were " + skins.size() + " skins to chose from");
+        return (File) skins.toArray()[rand.nextInt(skins.size())];
     }
 
     /**
@@ -183,8 +185,17 @@ public class SkinChangingHandler {
     public static ResourceLocation createGuiTexture(File file) {
         BufferedImage bufferedImage = null;
         try {
-            bufferedImage = ImageIO.read(file);
-            return Minecraft.getMinecraft().getTextureManager().getDynamicTextureLocation("gui_skin_" + System.currentTimeMillis(), new DynamicTexture(bufferedImage));
+            if (file != null) {
+                bufferedImage = ImageIO.read(file);
+            } else {
+                return DefaultPlayerSkin.getDefaultSkinLegacy();
+            }
+            if (bufferedImage != null) {
+                return Minecraft.getMinecraft().getTextureManager().getDynamicTextureLocation("gui_skin_" + System.currentTimeMillis(), new DynamicTexture(bufferedImage));
+            } else {
+                return DefaultPlayerSkin.getDefaultSkinLegacy();
+            }
+
         } catch (IOException e) {
             e.printStackTrace();
             return DefaultPlayerSkin.getDefaultSkinLegacy();
@@ -260,6 +271,10 @@ public class SkinChangingHandler {
         }
         MinecraftProfileTexture profile = map.get(MinecraftProfileTexture.Type.SKIN);
 
+        if (profile == null) {
+            return SkinInfo.SkinType.STEVE;
+        }
+
         if (profile.getMetadata("model") == null) {
             return SkinInfo.SkinType.STEVE;
         }
@@ -275,6 +290,10 @@ public class SkinChangingHandler {
 
         if (cap.getState() == PlayerUtil.RegenState.REGENERATING) {
             type.getRenderer().onRenderRegeneratingPlayerPost(type, e, cap);
+        }
+
+        if (!player.playerInfo.skinType.equalsIgnoreCase(cap.getSkinType().getMojangType())) {
+            setSkinType(player, cap.getSkinType().getMojangType().equalsIgnoreCase("slim") ? SkinInfo.SkinType.ALEX : SkinInfo.SkinType.STEVE);
         }
     }
 
@@ -334,7 +353,7 @@ public class SkinChangingHandler {
         try {
             skinInfo = SkinChangingHandler.getSkinInfo(player, cap);
         } catch (IOException e1) {
-            SKIN_LOG.error("Error creating skin for: " + player.getName() + " " + e1.getMessage());
+            SKIN_LOG.error("Error creating skin data for: " + player.getName() + " " + e1.getMessage());
         }
         if (skinInfo != null) {
             SkinChangingHandler.setPlayerSkin(player, skinInfo.getSkinTextureLocation());
